Player is in somewhat of a broken state. Figured out what to do next. Will refactor code and add more functionality.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,9 +17,9 @@ GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_Fir
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=3
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.AllowStaticLighting=False
@@ -29,12 +29,19 @@ r.SkinCache.CompileShaders=True
 
 r.RayTracing=True
 
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
+r.PathTracing=False
+r.Nanite.ProjectEnabled=True
+r.NormalMapsForStaticLighting=False
+r.RayTracing.Shadows=True
+r.RayTracing.UseTextureLod=False
+r.VirtualTextures=True
+r.VirtualTexturedLightmaps=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -99,4 +106,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonPickUpComponent",NewClassName="ValorantMechanicsPickUpComponent")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="ValorantMechanicsGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="ValorantMechanicsCharacter")
+MinDesiredFrameRate=120.000000
 
