--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,10 +86,10 @@
 bAltEnterTogglesFullscreen=True
 bF11TogglesFullscreen=True
 bUseMouseForTouch=False
-bEnableMouseSmoothing=True
-bEnableFOVScaling=True
+bEnableMouseSmoothing=False
+bEnableFOVScaling=False
 bCaptureMouseOnLaunch=True
-bEnableLegacyInputScales=True
+bEnableLegacyInputScales=False
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
 bShouldFlushPressedKeysOnViewportFocusLost=True
