Restore deleted directories, update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,5 @@ Saved/
 # Else
 Else/
 
-Content/__ExternalActors__
-Content/__ExternalObjects__
+# Content/__ExternalActors__
+# Content/__ExternalObjects__
