Update copyright notice

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ ProjectName=First Person Template
 ProjectID=E80AE75149EBFC4DCC0339AD3B337AA5
 Description="Recreating some of VALORANT\'s mechanics in Unreal Engine 5.5 "
 ProjectName=Valorant Mechanics
-CopyrightNotice=© 2025 swaroop. Personal Unreal Engine project inspired by VALORANT. Not affiliated with or endorsed by Riot Games.
+CopyrightNotice=© 2025 swaroop. Personal Unreal Engine project inspired by VALORANT.
 LicensingTerms="MIT License. Know more at: https://github.com/swoorpious/valorant_mechanics/blob/main/LICENSE.md"
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "2C95D56F49DB75E5C7F6C6B4134BB56B", "Valorant Mechanics")
 bUseBorderlessWindow=True
