--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,3 +108,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="ValorantMechanicsCharacter")
 MinDesiredFrameRate=120.000000
 
+[/Script/Engine.UserInterfaceSettings]
+UIScaleRule=Horizontal
+bAllowHighDPIInGameMode=True
+
